continue implementation of integration with the keycloak

--- a/movies-api/Makefile
+++ b/movies-api/Makefile
@@ -1,7 +1,7 @@
 # Build parameters
 OUT?=./target
 DOCKER_TMP?=$(OUT)/docker_temp/
-DOCKER_TAG?=skyglass/movies-api:1.0.0
+DOCKER_TAG?=skyglass/movies-api:1.0.1
 BINARY_NAME?=$(OUT)/movies-api-1.0.0.jar
 
 docker-build: build
@@ -9,7 +9,7 @@ docker-build: build
 	mkdir $(DOCKER_TMP)
 	cp $(BINARY_NAME) $(DOCKER_TMP)
 	cp ./Dockerfile $(DOCKER_TMP)Dockerfile
-	docker build -t $(DOCKER_TAG) $(DOCKER_TMP)
+	docker buildx build --platform linux/amd64,linux/arm64 -t $(DOCKER_TAG) --push $(DOCKER_TMP)
 	rm -rf $(DOCKER_TMP)
 build:
 	mvn package
