--- a/movies-ui/.dockerignore
+++ b/movies-ui/.dockerignore
@@ -1,5 +1,8 @@
-node_modules
-build
+npm-debug.log
 .dockerignore
+**/.git
+**/.DS_Store
+**/node_modules
+node_modules
 Dockerfile
 Dockerfile.prod
